# joke_generation_by_kge

./: .gitignore  README.md  config.ini  pyproject.toml
data/: ent_id2idx.pkl  ent_vocab.pkl  rel_id2idx.pkl  rel_vocab.pkl
notebook/: visualize_graph.ipynb  wiki2vec.ipynb
src/: app.py  build_KnowledgeGraph.py  link_prediction.py  openie.py  q_and_a.py  train_transh.py  visualize.py  visualize_graph.py  word2id.py
src/torchkge/models/: translation.py
src/utils/: datasets.py  prediction.py  preprocess.py  swear_word_cleaner.py
