[tool.poetry]
name = "jokegeneration_kge"
version = "0.1.0"
description = ""
authors = ["meciwo <shanshan0474@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
stanford-openie = "^1.0.3"
torchkge = "^0.16.25"

[tool.poetry.dev-dependencies]
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
