[tool.poetry]
name = "jokegeneration_kge"
version = "0.1.0"
description = ""
authors = ["meciwo <shanshan0474@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
stanford-openie = "^1.0.3"
torchkge = "^0.16.25"
spacy = "^3.1.1"
stanza = "^1.2.3"
matplotlib = "^3.4.3"
better-profanity = "^0.7.0"
networkx = "^2.6.3"
ipykernel = "^6.4.2"
pygraphviz = "^1.7"
streamlit = "^1.1.0"
wikipedia2vec = "^1.0.5"

[tool.poetry.dev-dependencies]
black = {version = "^21.7b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
